# src/swagger/swagger.json
@@ -46,7 +46,11 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "token": {
+                    "sub": "e8174fd2-7407-4ed3-a09c-25706529ef3a",
+                    "access_token": {
+                      "type": "string"
+                    },
+                    "refresh_token": {
                       "type": "string"
                     }
                   }
@@ -174,16 +178,129 @@
           }
         }
       }
+    },
+    "/api/user/me": {
+      "get": {
+        "tags": ["User"],
+        "summary": "Foydalanuvchi o‘z profil ma’lumotlarini olish",
+        "description": "Tizimga kirgan foydalanuvchi o‘zining to‘liq profil ma’lumotlarini olish uchun ishlatiladi. Foydaluvchi tokenini yuboradi va uning ma’lumotlari qaytariladi.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Foydalanuvchi ma’lumotlari",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/userDTO"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Token mavjud emas yoki noto‘g‘ri"
+          },
+          "403": {
+            "description": "Token muddati tugagan yoki noto‘g‘ri || Kirish taqiqlangan"
+          },
+          "404": {
+            "description": "Foydaluvchi topilmadi"
+          },
+          "500": {
+            "description": "Serverda xatolik"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["User"],
+        "summary": "Foydalivchi delete account qilish",
+        "description": "Foydaluvchi JWT tokeni orqali o`zini accountini delete qillishi uchun",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Profil muvaffaqiyatli o‘chirildi"
+          },
+          "401": {
+            "description": "Token mavjud emas yoki noto‘g‘ri"
+          },
+          "403": {
+            "description": "Token muddati tugagan yoki noto‘g‘ri || Kirish taqiqlangan"
+          },
+          "404": {
+            "description": "Foydaluvchi topilmadi"
+          },
+          "500": {
+            "description": "Serverda xatolik || O‘chirishda xatolik"
+          }
+        }
+      }
     }
   },
   "tags": [
     {
-      "name": "user",
+      "name": "User",
       "description": "Foydalanuvchilarlar boshqaruvi (foydaluvchilarning o`zini boshqarishi uchun)"
     },
     {
       "name": "Auth",
       "description": "Avtorizatsiya uchun pointlar"
     }
-  ]
+  ],
+  "components": {
+    "schemas": {
+      "userDTO": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid",
+            "description": "Foydalanuvchining yagona identifikatori"
+          },
+          "username": {
+            "type": "string",
+            "description": "Foydalanuvchining login nomi"
+          },
+          "firstname": {
+            "type": "string",
+            "description": "Ism"
+          },
+          "lastname": {
+            "type": "string",
+            "description": "Familiya"
+          },
+          "group_name": {
+            "type": "string",
+            "description": "Foydalanuvchining guruh raqami"
+          },
+          "role": {
+            "type": "string",
+            "enum": ["user", "admin", "teacher"],
+            "description": "Foydalanuvchi roli"
+          }
+        },
+        "example": {
+          "id": "7b9e48b6-9624-4f2d-a947-455c2ff13d28",
+          "username": "opisis",
+          "firstname": "Hojiakbar",
+          "lastname": "Murodillayev",
+          "group_name": "36-att-23",
+          "role": "user"
+        }
+      }
+    },
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  }
 }
